[package]
name = "science-vault"
version = "0.0.1-dev"
description = "ScienceVault a decentralized blockchain for transparent scientific data integrity."
authors = ["Analyzable"]
homepage = "https://github.com/Analyzable-FR/ScienceVault"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/Analyzable-FR/ScienceVault"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "science-vault"

[dependencies]
clap = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }
frame-system = { workspace = true }
futures = { workspace = true, features = ["thread-pool"] }
serde_json = { workspace = true, default-features = true }
jsonrpsee = { workspace = true, features = ["server"] }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
pallet-treasury = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-offchain = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sc-statement-store = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
science-vault-runtime = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }
substrate-frame-rpc-system = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"science-vault-runtime/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-system/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"science-vault-runtime/try-runtime",
	"sp-runtime/try-runtime",
]
std = [
	"clap/std",
	"frame-benchmarking/std",
	"frame-system/std",
	"futures/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"sc-executor/std",
	"science-vault-runtime/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-timestamp/std",
]
