[package]
name = "pallet-vault"
version = "0.0.1-dev"
description = "ScienceVault a decentralized blockchain for transparent scientific data integrity."
authors = ["Analyzable"]
homepage = "https://github.com/Analyzable-FR/ScienceVault"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/Analyzable-FR/ScienceVault"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-reward = { workspace = true }
pallet-timestamp = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, optional = true }
sp-runtime = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-reward/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"serde",
	"serde?/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-reward/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-reward/try-runtime",
	"pallet-timestamp/try-runtime",
	"sp-runtime/try-runtime",
]
